@@ -1,3 +1,10 @@
+Mon May  4 13:48:45 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
+
+    * examples/newsml_search.php,
+    * examples/newsml_showdoc.php,
+    * examples/newsml_indexer.php,
+    * examples/newsml.xsl: Added simple search UI.
+
 Mon May  4 11:58:09 BST 2009  Tom Mortimer <tom@lemurconsulting.com>
     
     * flaxclient.php: Added database getDocCount() method.
